--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -42,7 +42,9 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
+
                     <a class="navbar-brand" href="index.html">Startmin</a>
+
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -133,7 +135,11 @@
                         <ul class="nav" id="side-menu">
 
                             <li>
+                                <a href="#"><img src="{% static 'website/images/robo_logo.png' %}" alt="Image" class="img-fluid"></a>
+                            </li>
+                            <li>
                                 <a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+
                             </li>
 
                             <li>
@@ -141,7 +147,9 @@
                             </li>
                             <li>
                                 <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
+
                             </li>
+
                         </ul>
                     </div>
                 </div>
@@ -151,7 +159,9 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
+
                             <h1 class="page-header">Dashboard</h1>
+
                         </div>
                         <!-- /.col-lg-12 -->
                     </div>
@@ -250,7 +260,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="qrform.html"><img src="{% static 'website/images/robo_logo.png' %}" alt="Image" class="img-fluid"></a>
+                    
                 <!-- /.container-fluid -->
             </div>
             <!-- /#page-wrapper -->
