--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -54,8 +54,10 @@
 
 
 				<div class="form-row-last">
-					<input type="submit" name="register" class="register" value="Submit">
+					
+					<a type="submit" name="register" class="register" value="Submit" href="confirmation.html">Submit</a>
 				</div>
+
 
 			</form>
 		</div>
